--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,10 +70,10 @@ body {
 
 .slide-top-enter-active,
 .slide-top-leave-active {
-    transition: transform 0.15s ease-in;
+    transition: transform 15s ease-in-out;
 }
 
 .slide-top-enter-from,
 .slide-top-leave-to {
-    transform: translate3d(0, -20px, 0);
+    transform: scale(0);
 }
