--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@ body {
 ::-webkit-scrollbar {
     width: 2px;
     height: 1px;
+    transition: all;
 }
 
 ::-webkit-scrollbar-track {
@@ -25,6 +26,7 @@ body {
     background-color: #d6d6d6;
     border-radius: 24px;
 }
+
 
 .page-enter-active,
 .page-leave-active {
