changed position of chat setting modal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,7 +77,7 @@ body {
 
 .slide-top-enter-from,
 .slide-top-leave-to {
-    transform: scale(0);
+    transform: translateY(0%);
 }
 
 .slide-left-enter-active,
