--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,3 +90,17 @@ body {
     transform: translateX(0%);
     opacity: 0;
 }
+
+
+.dropdownBottom-enter-active,
+.dropdownBottom-leave-active {
+    transform: translateY(0);
+    transition: all 200ms ease-in-out;
+
+}
+
+.dropdownBottom-enter-from,
+.dropdownBottom-leave-to {
+    opacity: 0;
+    transform: translateY(-16px);
+}
